Fixing react-tooltip bug
Not showing tooltips in each array.map iteration

--- a/frontend_react/src/container/Skills/Skills.scss
+++ b/frontend_react/src/container/Skills/Skills.scss
@@ -122,6 +122,9 @@
         color: var(--gray-color);
         margin-top: 5px;
       }
+
+
+      
     }
   }
   
@@ -143,15 +146,17 @@
     background-color: var(--white-color) ;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.1) ;
     border-radius: 5px ;
-    // padding: 1rem ;
+    padding: 1rem ;
     color: var(--gray-color) ;
     text-align: center ;
     line-height: 1.5 ;
     opacity: 1 ;
+    // background-color: aqua;
+    
   
     @media screen and (min-width: 2000px) {
-      font-size: 1.75rem !important;
-      max-width: 500px !important;
-      line-height: 2 !important;
+      font-size: 1.75rem ;
+      max-width: 500px ;
+      line-height: 2 ;
     }
   }
